test_apps/c/ffi/include/liter_llm.h

typedef uint64_t LITERLLMAlefHandle;
void literllm_decoded_data_url_free(LITERLLMAlefHandle handle);
char *literllm_delete_response_to_json(LITERLLMAlefHandle handle);
void literllm_delete_response_free(LITERLLMAlefHandle handle);
char *literllm_embedding_response_to_json(LITERLLMAlefHandle handle);
void literllm_embedding_response_free(LITERLLMAlefHandle handle);
char *literllm_file_list_response_to_json(LITERLLMAlefHandle handle);
void literllm_file_list_response_free(LITERLLMAlefHandle handle);
char *literllm_file_object_to_json(LITERLLMAlefHandle handle);
void literllm_file_object_free(LITERLLMAlefHandle handle);
char *literllm_image_url_to_json(LITERLLMAlefHandle handle);
void literllm_image_url_free(LITERLLMAlefHandle handle);
char *literllm_images_response_to_json(LITERLLMAlefHandle handle);
void literllm_images_response_free(LITERLLMAlefHandle handle);
char *literllm_llm_config_to_json(LITERLLMAlefHandle handle);
char *literllm_llm_provider_config_to_json(LITERLLMAlefHandle handle);
void literllm_llm_provider_config_free(LITERLLMAlefHandle handle);
char *literllm_model_info_to_json(LITERLLMAlefHandle handle);
void literllm_model_info_free(LITERLLMAlefHandle handle);
char *literllm_models_list_response_to_json(LITERLLMAlefHandle handle);
void literllm_models_list_response_free(LITERLLMAlefHandle handle);
char *literllm_moderation_response_to_json(LITERLLMAlefHandle handle);
void literllm_moderation_response_free(LITERLLMAlefHandle handle);
char *literllm_ocr_response_to_json(LITERLLMAlefHandle handle);
void literllm_ocr_response_free(LITERLLMAlefHandle handle);
char *literllm_provider_capabilities_to_json(LITERLLMAlefHandle handle);
void literllm_provider_capabilities_free(LITERLLMAlefHandle handle);
char *literllm_provider_config_to_json(LITERLLMAlefHandle handle);
void literllm_provider_config_free(LITERLLMAlefHandle handle);
char *literllm_rate_limit_config_to_json(LITERLLMAlefHandle handle);
void literllm_rate_limit_config_free(LITERLLMAlefHandle handle);
char *literllm_rerank_response_to_json(LITERLLMAlefHandle handle);
void literllm_rerank_response_free(LITERLLMAlefHandle handle);
char *literllm_response_object_to_json(LITERLLMAlefHandle handle);
void literllm_response_object_free(LITERLLMAlefHandle handle);
char *literllm_search_response_to_json(LITERLLMAlefHandle handle);
void literllm_search_response_free(LITERLLMAlefHandle handle);
char *literllm_transcription_response_to_json(LITERLLMAlefHandle handle);
void literllm_transcription_response_free(LITERLLMAlefHandle handle);
char *literllm_wait_for_batch_config_to_json(LITERLLMAlefHandle handle);
void literllm_refresh_outcome_free(LITERLLMAlefHandle handle);
char *literllm_refresh_outcome_to_json(LITERLLMAlefHandle handle);
char *literllm_all_providers(void);
LITERLLMAlefHandle literllm_capabilities(const char *provider_name);
int32_t literllm_check_bound(const char *context,
                             uintptr_t current_len,
                             uintptr_t incoming,
                             uintptr_t limit);
void literllm_clear(void);
void literllm_clear_catalog_overlay(void);
double literllm_completion_cost(const char *model,
                                uint64_t prompt_tokens,
                                uint64_t completion_tokens);
int32_t literllm_completion_cost_has_result(const char *model,
                                            uint64_t prompt_tokens,
                                            uint64_t completion_tokens);
double literllm_completion_cost_with_cache(const char *model,
                                           uint64_t prompt_tokens,
                                           uint64_t cached_tokens,
                                           uint64_t completion_tokens);
int32_t literllm_completion_cost_with_cache_has_result(const char *model,
                                                       uint64_t prompt_tokens,
                                                       uint64_t cached_tokens,
                                                       uint64_t completion_tokens);
char *literllm_complex_provider_names(void);
uintptr_t literllm_count_request_tokens(const char *model,
                                        LITERLLMAlefHandle req);
uintptr_t literllm_count_tokens(const char *model,
                                const char *text);
LITERLLMAlefHandle literllm_create_client(const char *api_key,
                                          const char *base_url,
                                          uint64_t timeout_secs,
                                          uint32_t max_retries,
                                          const char *model_hint);
LITERLLMAlefHandle literllm_create_client_from_json(const char *json);
LITERLLMAlefHandle literllm_decode_data_url(const char *url);
char *literllm_encode_data_url(const uint8_t *bytes,
                               uintptr_t bytes_len,
                               const char *mime);
void literllm_ensure_crypto_provider(void);