packages/csharp/LiterLlm/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_decoded_data_url_free")]
    internal static extern void DecodedDataUrlFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_delete_response_to_json")]
    internal static extern IntPtr DeleteResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_delete_response_free")]
    internal static extern void DeleteResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_to_json")]
    internal static extern IntPtr EmbeddingResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_free")]
    internal static extern void EmbeddingResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_response_to_json")]
    internal static extern IntPtr FileListResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_response_free")]
    internal static extern void FileListResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_object_to_json")]
    internal static extern IntPtr FileObjectToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_object_free")]
    internal static extern void FileObjectFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_image_url_to_json")]
    internal static extern IntPtr ImageUrlToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_image_url_free")]
    internal static extern void ImageUrlFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_to_json")]
    internal static extern IntPtr ImagesResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_free")]
    internal static extern void ImagesResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_config_to_json")]
    internal static extern IntPtr LlmConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_provider_config_to_json")]
    internal static extern IntPtr LlmProviderConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_provider_config_free")]
    internal static extern void LlmProviderConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_model_info_to_json")]
    internal static extern IntPtr ModelInfoToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_model_info_free")]
    internal static extern void ModelInfoFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_to_json")]
    internal static extern IntPtr ModelsListResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_free")]
    internal static extern void ModelsListResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_to_json")]
    internal static extern IntPtr ModerationResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_free")]
    internal static extern void ModerationResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_to_json")]
    internal static extern IntPtr OcrResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_free")]
    internal static extern void OcrResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_capabilities_to_json")]
    internal static extern IntPtr ProviderCapabilitiesToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_capabilities_free")]
    internal static extern void ProviderCapabilitiesFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_config_to_json")]
    internal static extern IntPtr ProviderConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_provider_config_free")]
    internal static extern void ProviderConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_to_json")]
    internal static extern IntPtr RateLimitConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_free")]
    internal static extern void RateLimitConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_refresh_outcome_to_json")]
    internal static extern IntPtr RefreshOutcomeToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_refresh_outcome_free")]
    internal static extern void RefreshOutcomeFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_to_json")]
    internal static extern IntPtr RerankResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_free")]
    internal static extern void RerankResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_response_object_to_json")]
    internal static extern IntPtr ResponseObjectToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_response_object_free")]
    internal static extern void ResponseObjectFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_to_json")]
    internal static extern IntPtr SearchResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_free")]
    internal static extern void SearchResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_to_json")]
    internal static extern IntPtr TranscriptionResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_free")]
    internal static extern void TranscriptionResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_to_json")]
    internal static extern IntPtr WaitForBatchConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_all_providers")]
    internal static extern IntPtr AllProviders();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_capabilities")]
    internal static extern ulong Capabilities(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string providerName
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_check_bound")]
    internal static extern int CheckBound(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string context,
        ulong currentLen,
        ulong incoming,
        ulong limit
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_clear")]
    internal static extern void Clear();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_clear_catalog_overlay")]
    internal static extern void ClearCatalogOverlay();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost")]
    internal static extern double CompletionCost(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost_has_result")]
    internal static extern int CompletionCostHasResult(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost_with_cache")]
    internal static extern double CompletionCostWithCache(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong cachedTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_completion_cost_with_cache_has_result")]
    internal static extern int CompletionCostWithCacheHasResult(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong promptTokens,
        ulong cachedTokens,
        ulong completionTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_complex_provider_names")]
    internal static extern IntPtr ComplexProviderNames();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_count_request_tokens")]
    internal static extern ulong CountRequestTokens(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_count_tokens")]
    internal static extern ulong CountTokens(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client")]
    internal static extern ulong CreateClient(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string apiKey,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string baseUrl,
        ulong timeoutSecs,
        uint maxRetries,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string modelHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client_from_json")]
    internal static extern ulong CreateClientFromJson(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string json
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_decode_data_url")]
    internal static extern ulong DecodeDataUrl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_encode_data_url")]
    internal static extern IntPtr EncodeDataUrl(
        IntPtr bytes,
        UIntPtr bytesLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mime
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ensure_crypto_provider")]
    internal static extern void EnsureCryptoProvider();
